# selective-ocaml

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  index.html  selective.opam
example/: dune  list_selective.ml  sexp_parser.ml  task.ml
selective/: index.html
selective/Selective/: index.html
selective/Selective/module-type-Basic/: index.html
selective/Selective/module-type-S/: index.html
selective/Selective/module-type-S/Applicative_infix/: index.html
selective/Selective__/: index.html
selective/Selective__/Selective_intf/: index.html
selective/Selective__/Selective_intf/module-type-Basic/: index.html
selective/Selective__/Selective_intf/module-type-S/: index.html
selective/Selective__/Selective_intf/module-type-S/Applicative_infix/: index.html
selective/Selective__Selective_intf/: index.html
selective/Selective__Selective_intf/module-type-Basic/: index.html
selective/Selective__Selective_intf/module-type-S/: index.html
selective/Selective__Selective_intf/module-type-S/Applicative_infix/: index.html
src/: dune  selective.ml  selective.mli  selective_intf.ml
test/: dune  tests.ml
